# occule

./: Cargo.toml
.github/workflows/: docs.yml
src/: codec.rs  lib.rs
src/binary/: mod.rs  reverse_appendix.rs
src/gltf/: extras.rs  mod.rs
src/jpeg/: mod.rs  segment.rs
src/jpg/: segment.rs
src/lossless/: champleve.rs  lsb.rs  mod.rs
src/wav/: lsb.rs  mod.rs
