[package]
name = "occule"
version = "0.2.1"
edition = "2021"

[features]
default = ["jpeg", "lossless"]
jpeg = ["dep:img-parts"]
lossless = ["dep:image"]

[dependencies]
thiserror = "^1.0"

[dependencies.img-parts]
version = "0.3.0"
optional = true

[dependencies.image]
version = "0.24"
optional = true
