[package]
name = "occule"
version = "0.3.0"
edition = "2021"

[features]
default = ["jpeg", "lossless", "gltf", "wav"]
jpeg = ["dep:img-parts"]
lossless = ["dep:image"]
gltf = ["dep:gltf", "dep:serde", "dep:serde_json", "dep:gltf-json"]
bin = ["dep:serde", "dep:rmp-serde"]
wav = ["dep:hound"]

[dependencies]
base64 = "0.22"
thiserror = "1.0"
itertools = "0.13"
num-traits = "0.2"

[dependencies.rmp-serde]
version = "1.3"
optional = true

[dependencies.gltf-json]
version = "1.4"
features = ["extras"]
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
features = ["raw_value"]
optional = true

[dependencies.img-parts]
version = "0.3"
optional = true

[dependencies.image]
version = "0.25"
optional = true

[dependencies.gltf]
version = "1.4"
optional = true
features = ["extras"]

[dependencies.hound]
version = "3.5"
optional = true

